+ Added Sys_GetConfig(), Sys_GetDrives(), Sys_DriveInfo(),
  Sys_DriveFree(), Sys_Path(), Sys_Type(), and Sys_Counter16()
+ Added Print_Busy(), Print_Char(), Print_String()
+ Added Win_X() and Win_Y()
+ Added Shell_Locate()
+ Added Mouse_Dragging()
+ Added Timer_Wake()
+ Added Msg_Wait()
+ Added File_ErrMsg()
+ Added support for menu icons
+ Added _msgpid()
+ Enabled %f in scanf()
+ Added ftoa()
@ Reorganized documentation
@ Improved thread safety for system calls and various others
@ Reduced chances of ill-timed messages being lost
@ Fixed/updated Key_Multi() for SymbOS 4.0 [credit: Prodatron]
@ Fixed gfx2sgx generating incorrect 4-color images
@ Fixed thread_quit() semaphore conflict that could cause freezes
@ Fixed Gfx_VLine() overwriting IY
@ Fixed Gfx_Line() freezing on long lines
@ Fixed vertical C_GRID controls
@ Fixed Menu_Context() return values
@ Fixed bad forward references to memmove()
@ Fixed Dir_Read() failing on some file length sequences
@ Fixed Mouse_X() returning Y value
@ Fixed digit order in atof()
@ Fixed Timer_Add() returning wrong ID
@ Simplified FRAME_XOR property
@ Moved atof() from libm to stdlib
@ Changed Sys_Version() to _sysversion global (now used by crt0)
@ Win_Open() PID now set correctly for other banks/threads
@ Changed ip to char[4] for thread-safety in libnet
@ Moved location of 16-color icon so EXEs compress correctly
@ _Sym_Header -> App_Header, with fixed contents
@ Fixed a rare casting error when multiplying ints
@ Various structs tweaked to better support SymbOS 4.0 features

v1.1
+ Added libgfx
+ Added gfx2sgx
+ Added gfxdemo.c sample
+ Added sound daemon support
+ Added snddemo.c sample
+ Added md2hlp.py and SymbOS .HLP documentation
+ Added sortmap tool for reading memory maps
+ Added compression system calls
+ Added C_GRID and C_TREE controls
+ Added Shell_CharWatch() system call
+ Added Sys_Version() system call
+ Added Win_Width() and Win_Height() utility functions
@ libz80 is now in the primary codebase