@@ -18,6 +18,7 @@ v1.2
 + Added _msgpid()
 + Enabled %f in scanf()
 + Added ftoa()
++ Added (undocumented) Int_Enable() and Int_Disable()
 @ Reorganized documentation
 @ Improved thread safety for system calls and various others
 @ Reduced chances of ill-timed messages being lost
